exploring tye definition files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNLrJhOMz6idD05pzfn5lhA-TAw-mAZCU"></script>
+    <div id="map" style="height: 100%"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZUZMGXu14HBUc70HsdvxuIjx5lx8Zs8I"></script>
     <script src="./src/index.ts"></script>
 </body>
 
